# mnemo

./: .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  MCP_LISTINGS.md  README.md  SECURITY.md  ai-act.html  claims_audit.py  governance_audit.py  haystack_audit.py  index.html  pyproject.toml  robots.txt  server.json  sitemap.xml  store_audit.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: audit.yml  ci.yml  release.yml
assets/: index-B015VZFQ.js  index-BmqqY9FU.css  index-BsD0B5K4.js  index-CqT4d_L3.css  motion-B8OfwHgZ.js  scroll-jFF5GoMt.js  three-Bkb2dqNl.js
bench/: README.md  _control_rawiter.py  _diag_cr.py  _diag_cr2.py  memoryagentbench_cr.py  results_cr_sweep.json  run_cr_benchmark.py
benchmarks/: property_benchmark.py  property_benchmark.result.json
benchmarks/memops/: ERASURE_REVERT_SPEC.md  PREREGISTRATION.md  README.md  erasure_revert_probe.py  mem0_budget_diagnostic.py  pilot.py  retrieval_coverage.py  stale_diagnostic.py
docs/: AI_ACT.md  API.md  COMPLIANCE.md  INTEGRATIONS.md  SECOND_BRAIN.md
examples/: 01_basics.py  02_correction_and_erasure.py  03_semantic_recall.py  04_encryption.py  05_review_trigger.py  06_gdpr_erasure_receipt.py  06_mem0_dropin.py  07_langgraph_memory.py  07_witness_pool.py  08_code_guard.py  09_audit_bundle.py  10_compliance_overlay.py  README.md  integrity_recall_demo.py  trust_is_not_truth.py
examples/n8n/: README.md  self_correcting_memory_agent.json
inspeximus/: __init__.py  _update.py  audit_bundle.py  browser.py  claude_code.py  cli.py  code_guard.py  compliance.py  core.py  deletion_manifest.py  erasure_auditor.py  install.py  mcp.py  mcp_server.py  mnemo_mcp.py  witness_pool.py  witness_server.py
inspeximus/integrations/: __init__.py  autogen.py  crewai.py  google_adk.py  governance.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  memoryagentbench.py  openai_agents.py  pydantic_ai.py
inspeximus/probes/: forget_emits_tombstone_probe.py  trusted_only_poison_defense_probe.py
mnemo/: __init__.py  claude_code.py  deletion_manifest.py  erasure_auditor.py  mem0.py  mem0_compat.py  mnemo.py  mnemo_mcp.py
probes/: INTEGRITY_BENCHMARK.md  README.md  _tipping_confound.py  agentpoison_influence_gate.py  agentpoison_influence_gate_validation.py  attribution_floor.py  attribution_verified_key.py  authorized_revert_probe.py  autostamp_lineage.py  browser_and_cli_probe.py  check_conflict_probe.py  coherence_gate_demo.py  conflict_depth_compounding.py  continuous_chunk_recall_probe.py  cost_per_op.py  cost_per_op_result.json  distill_and_remember_probe.py  echo_attack_probe_v2.py  embed_query_asymmetric_probe.py  embed_recipe_migration_guard_probe.py  encryption_at_rest_probe.py  erasure_certificate_probe.py  erasure_edgecases_probe.py  erasure_raw_store_probe.py  evidence_grade_ratchet.py  execution_receipt_gate_probe.py  extractor_adapter_wireup_probe.py  extractor_hook_probe.py  extractor_nonreferring_subject_probe.py  forget_subject_tombstone_probe.py  forget_verification_bench.py  generative_agents_agent_result.json  generative_agents_agent_stress.py  generative_agents_retrieval_stress.py  generative_agents_retrieval_stress_result.json  governance_sufficiency_bytes.json  governance_sufficiency_probe.py  graph_layer_probe.py  hydration_witness_probe.py  identity_gate_supersession_probe.py  (+63 more)
site/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: test_audit_bundle.py  test_bitemporal.py  test_clean_memory.py  test_code_guard.py  test_compliance.py  test_compliance_receipt.py  test_core.py  test_encryption.py  test_erasure.py  test_erasure_audit.py  test_erasure_manifest_integration.py  test_governance.py  test_governance_mixin.py  test_hardening.py  test_haystack.py  test_identity_gate.py  test_install.py  test_integration_governance.py  test_integration_langgraph.py  test_langgraph_store_parity.py  test_mcp_compliance_tools.py  test_mem0_compat.py  test_provenance.py  test_reopen_provenance_class.py  test_reopen_readpath.py  test_reopen_signed_grounds.py  test_reopen_support.py  test_restatement_not_supersession.py  test_selection_integrity.py  test_soft_delete_probes.py  test_stale_value_suppression.py  test_tenant_pii.py  test_universal_executor.py  test_verify_claim.py  test_warrant_guard.py  test_witness_cosign.py  test_witness_pool.py
tools/: split_readme.py
(+11 files in other folders)
