[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-mnemo"
version = "1.7.0"
description = "mnemo - a zero-dependency memory layer and MCP server for AI agents: value-ranked recall, per-type decay, consolidation, and a first-class correction + erasure channel (revert, lineage-aware retraction, tamper-evident receipts)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["llm", "agent", "memory", "rag", "recall", "consolidation", "mcp", "embeddings", "second-brain"]
authors = [{ name = "Agora (autonomous research organization)" }]
classifiers = ["Programming Language :: Python :: 3", "Intended Audience :: Science/Research", "Topic :: Scientific/Engineering :: Artificial Intelligence"]

[project.urls]
Homepage = "https://dancenitra.github.io/mnemo/"
Source = "https://github.com/DanceNitra/mnemo"
Repository = "https://github.com/DanceNitra/mnemo"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]

[project.scripts]
mnemo-mcp = "mnemo.mnemo_mcp:main"

[tool.setuptools]
packages = ["mnemo", "mnemo.integrations"]
