[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inspeximus"
version = "1.44.0"
description = "The self-correcting memory layer for AI agents: when a fact is corrected, Inspeximus serves the new value and resists the old one resurfacing. Zero-dependency single file + MCP server — value-ranked recall, per-type decay, consolidation, revert, and tamper-evident erasure."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["llm", "agent", "memory", "rag", "recall", "consolidation", "mcp", "embeddings", "second-brain"]
authors = [{ name = "Rastislav Drahoš (Agora)" }]
classifiers = ["Programming Language :: Python :: 3", "Intended Audience :: Science/Research", "Topic :: Scientific/Engineering :: Artificial Intelligence"]

[project.urls]
Homepage = "https://dancenitra.github.io/inspeximus/"
Source = "https://github.com/DanceNitra/inspeximus"
Repository = "https://github.com/DanceNitra/inspeximus"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0"]
# Agent-framework integrations (inspeximus.integrations.*) — opt-in; the core library stays zero-dependency.
langchain = ["langchain-core"]
langgraph = ["langgraph"]
llamaindex = ["llama-index-core"]
autogen = ["autogen-agentchat", "autogen-core"]
google-adk = ["google-adk"]
openai-agents = ["openai-agents"]
pydantic-ai = ["pydantic-ai"]
crewai = ["crewai"]

[project.scripts]
inspeximus = "inspeximus.cli:main"
inspeximus-mcp = "inspeximus.mcp_server:main"

[tool.setuptools]
packages = ["inspeximus", "inspeximus.integrations"]
